Added tests and aligned the whole pipeline.